Database storing usernames/passwords, API to create and read users defined, create and read functions implemented to login/register
