# TrainingControlCenter/backend/src/app.js
@@ -1,25 +1,3 @@
-// import express from 'express';
-// import bodyParser from 'body-parser';
-// import mongoose from 'mongoose';
-// import cors from 'cors';
-
-// import tccRoutes from './src/routes/tcc.js';
-
-// const app = express();
-
-// app.use('/tcc', tccRoutes);
-
-// app.use(bodyParser.json({limit: "30mb", extended: true}));
-// app.use(bodyParser.urlencoded({limit: "30mb", extended: true}));
-// app.use(cors());
-
-// const CONNECTION_URL = 'mongodb+srv://fkurmann:04AXKAT6QrqHHQGV@trainingcontrolcenter.szdxy0v.mongodb.net/test';
-// const PORT = process.env.PORT || 5000;
-
-// mongoose.connect(CONNECTION_URL, {useNewUrlParser: true, useUnifiedTopology: true})
-//   .then(() => app.listen(PORT, () => console.log(`Server running on port: ${PORT}`)))
-//   .catch((error) => console.log(error.message));
-
 const express = require('express');
 const cors = require('cors');
 const yaml = require('js-yaml');
@@ -50,8 +28,12 @@ app.use(
 
 // API Paths
 
+// Register
+app.post('/v0/register', auth.register);
+
 // Login
 app.post('/v0/login', auth.login);
+
 
 
 // // Examples for future routes
